movements and collision check with enemy

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "devDependencies": {
+    "@types/node": "^22.7.5",
     "gts": "^6.0.2",
-    "typescript": "^5.7.3",
-    "@types/node": "^22.7.5"
+    "typescript": "^5.7.3"
   },
   "scripts": {
     "lint": "gts lint",
