--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
+  "type": "module",
   "devDependencies": {
     "@types/node": "^22.7.5",
     "gts": "^6.0.2",
-    "typescript": "^5.7.3"
+    "ts-loader": "^9.5.2",
+    "typescript": "^5.7.3",
+    "webpack": "^5.98.0",
+    "webpack-cli": "^6.0.1"
   },
   "scripts": {
+    "build": "tsc && webpack",
+    "start": "webpack serve --open",
     "lint": "gts lint",
     "clean": "gts clean",
     "compile": "tsc",
